--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
 * {
     margin: 0px;
     padding: 0px;
-    font-family: roboto;
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+    font-style: normal;
     box-sizing: border-box;
     font-size: 0;
 }
